# JUSTINA

./: .gitignore  .gitmodules  Ideas  JustinaIDEVim.sh  JustinaSetup.sh  JustinaSetupDocker.sh  JustinaSetupGPU.sh  JustinaSetupMelodic.sh  JustinaSetupROS.sh  JustinaSetupROSMelodic.sh  installOpenCV_3.3.1.sh  replaceOpencv_3.3.1.sh
catkin_ws/src/deteccion_trackeo/Haar_disp/: CMakeLists.txt  package.xml
catkin_ws/src/deteccion_trackeo/Haar_disp/src/: haardispada.cpp  haardispada_node.cpp
catkin_ws/src/hardware/arms/: CMakeLists.txt  package.xml
catkin_ws/src/hardware/arms/launch/: arms.launch
catkin_ws/src/hardware/arms/scripts/: #left_arm_node.py#  Dynamixel.py  Dynamixel.py~  initializing_arms_node.py  left_arm_node.py  left_arm_simul_node.py  right_arm_node.py  right_arm_simul_node.py
catkin_ws/src/hardware/arms/src/: left_arm_node.cpp  left_arm_real_simul.cpp  right_arm_node.cpp  right_arm_real_simul.cpp
catkin_ws/src/hardware/arms/srv/: arm_abspos_xyz.srv  arm_abspos_xyzrpy.srv  arm_abspos_xyzrpye.srv  arm_artpos.srv  arm_closegrip.srv  arm_goto.srv  arm_move.srv  arm_opengrip.srv  arm_rel_artpos.srv
catkin_ws/src/hardware/head/: CMakeLists.txt  package.xml
catkin_ws/src/hardware/head/scripts/: Dynamixel.py  head_node.py  head_node.py~  head_real_simul_node.py  head_simul_node.py
catkin_ws/src/hardware/head/src/: head_node.cpp  left_arm_real_simul.cpp
catkin_ws/src/hardware/mobile_base/: CMakeLists.txt  justina.xml  justina.xml~  package.xml
catkin_ws/src/hardware/mobile_base/scripts/: Roboclaw.py  mecanum_base.py  mobile_base_b_node.py  mobile_base_node.py  mobile_base_node.py~  mobile_base_simul_node.py  new_roboclaw_test.py  omni_base.py  omni_base2_node.py  omni_base_node.py  omni_base_old.py  omni_hexa_base.py  omni_octo_base.py
catkin_ws/src/hardware/mobile_base/src/: omni_base_node.cpp
catkin_ws/src/hardware/point_cloud_manager/: CMakeLists.txt  package.xml
catkin_ws/src/hardware/point_cloud_manager/src/: PcManNode.cpp  PcManNode.h  point_cloud_man_node.cpp
catkin_ws/src/hardware/torso/: CMakeLists.txt  package.xml
catkin_ws/src/hardware/torso/scripts/: comm.py  torso_driver.py  torso_node.py  torso_nodeG.py  torso_node_A.py  torso_real_simul.py  torso_simul_node.py
catkin_ws/src/hardware/torso/src/: torso_node_pololu.cpp
catkin_ws/src/hardware/webcam_man/: CMakeLists.txt  package.xml
catkin_ws/src/hardware/webcam_man/src/: webcam_man_node.cpp
catkin_ws/src/hardware/webcam_man/srv/: GetRgb.srv
catkin_ws/src/hri/jrviz/: CMakeLists.txt  package.xml
catkin_ws/src/hri/jrviz/src/: QtRosNode.h  jrviz_node.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myvizcpp  myvizh
catkin_ws/src/hri/justina_gui/: CMakeLists.txt  package.xml
catkin_ws/src/hri/justina_gui/src/: MainWindow.cpp  MainWindow.h  MainWindow.ui  QtRosNode.cpp  QtRosNode.h  justina_gui_node.cpp  justina_gui_node.cpp~  myviz.h
catkin_ws/src/hri/justina_simple_gui/: CMakeLists.txt  package.xml
catkin_ws/src/hri/justina_simple_gui/src/: MainWindow.cpp  MainWindow.h  MainWindow.ui  QtRosNode.cpp  QtRosNode.h  justina_simple_gui_node.cpp
catkin_ws/src/hri/sp_gen/: CMakeLists.txt  CMakeLists.txt~  package.xml
catkin_ws/src/hri/sp_gen/src/: sp_gen_node.cpp  sp_gen_node.cpp~
catkin_ws/src/interoperation/at_home_rsbb_comm_ros/: .gitignore  .gitmodules  CMakeLists.txt  README.md  cleanup
catkin_ws/src/interoperation/at_home_rsbb_comm_ros/msg/: Benchmark.msg  DevicesState.msg
catkin_ws/src/interoperation/at_home_rsbb_comm_ros/src/: comm.cpp  comm_benchmarks.h
catkin_ws/src/manipulation/manip_msgs/: CMakeLists.txt  CMakeLists.txt~  package.xml~
catkin_ws/src/manipulation/manip_msgs/srv/: InverseKinematicsFloatArray.srv  InverseKinematicsPath.srv  SpeedProfile.srv
catkin_ws/src/planning/act_pln/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
catkin_ws/src/planning/act_pln/src/: JustinaHardware.cpp  JustinaHardware.h  act_pln_node.cpp  async_audio_test.cpp  carry_my_luggage.cpp  catering_comfort_test.cpp  clean_up_test.cpp  cubes_challenge.cpp  demo_alexa.cpp  eegpsr_test.cpp  farewell.cpp  final_cubes_challange.cpp  final_robocup2019.cpp  follow_me_test.cpp  getting_to_know_my_home.cpp  gpsr_test.cpp  helpMeCarry_test.cpp  hybrid_follow_test.cpp  just_for_grasp_test.cpp  just_for_test.cpp  manipulation_test.cpp  manipulation_test_linea.cpp  monitor.cpp  navigation_test.cpp  object_trainning.cpp  open_challenge.cpp  open_challenge_nagoya.cpp  p_and_g_test.cpp  p_and_g_test_segmentcolor.cpp  person_recognition.cpp  predefined_questions.csv  rec_obj_votation_test.cpp  receptionist.cpp  restaurant.cpp  restaurant_canada.cpp  restaurant_nagoya.cpp  restaurant_nagoya_seg.cpp  restaurant_sydney.cpp  robot_inspection_test.cpp  robot_inspection_test_2.cpp  (+22 more)
catkin_ws/src/planning/action_planner/: CMakeLists.txt  package.xml
catkin_ws/src/planning/action_planner/dummy/: DepCheck.cmake  README
catkin_ws/src/planning/action_planner/src/: action_planner_complete.cpp
catkin_ws/src/planning/knowledge/: CMakeLists.txt  package.xml
catkin_ws/src/planning/knowledge_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/planning/knowledge_representation/: CMakeLists.txt  package.xml
catkin_ws/src/planning/planning_clips/: CMakeLists.txt  package.xml
catkin_ws/src/planning/planning_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/planning/planning_open_challenge/: CMakeLists.txt  package.xml
catkin_ws/src/planning/roah_rsbb_comm_ros/: package.xml
catkin_ws/src/planning/supervisor/: CMakeLists.txt  package.xml
catkin_ws/src/planning/tutorials/: CMakeLists.txt  package.xml
catkin_ws/src/tests/func_test/: CMakeLists.txt  package.xml
catkin_ws/src/tests/func_test/src/: arms_sm.cpp  (+33 more)
catkin_ws/src/tools/hardware_tools/: CMakeLists.txt  CMakeLists.txt~  package.xml  setup.py
catkin_ws/src/tools/justina_tools/: CMakeLists.txt  CMakeLists.txt~  package.xml
catkin_ws/src/vision/color_reco/: CMakeLists.txt  package.xml
catkin_ws/src/vision/cubes_segmentation/: CMakeLists.txt  package.xml
catkin_ws/src/vision/face_recog/: CMakeLists.txt  package.xml
(+2020 files in other folders)
